--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Luna Banner package",
     "type": "windwalker-package",
     "require": {
-        "myclabs/php-enum": "^1.8",
-        "lyrasoft/luna": "^1.0||^2.0"
+        "php": ">=8.2",
+        "lyrasoft/luna": "^2.0"
     },
     "license": "MIT",
     "autoload": {
